@@ -30,6 +30,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1342811: Fix leak in Tkinter.Menu.delete. Commands associated to
+  menu entries were not deleted.
+
 - Remove the TarFileCompat class from tarfile.py.
 
 - Issue #2491: os.fdopen is now almost an alias for the built-in open(), and
